# slow-libs

./: .clang-format  .clang-format-ignore  .gitignore  LICENSE  README.md  adj_matrix.c  bigint.h  chacha20.h  common.h  csv.h  lint.sh  meson.build  slowarr.h  slowgraph.h  slowurl.h  systemrand.h
chacha20/: nostd0.c
doc/: cacha20.md
include/slowlibs/: aed.h  cbor.h  chacha20.h  csv.h  fixed_bigint.h  io.h  poly1305.h  sha3.h  slowarr.h  slowcrypt.h  slowgraph.h  systemrand.h  util.h
slowarr/: nostd1.c  std1.c  std1.cxx
slowcrypt/: slowcrypt.c
slowgraph/: dgtxt.typ  sgraph-adj.c
src/: include_impl.c  io.c  util.c
src/slowcrypt/: balloon_kchacha.c  chacha20.c  cli-slowcrypt.c  sha3.c  sha3_gen_rc.c  systemrand.c
src/slowgraph/: dgtxt.typ
tests/chacha20/: balloon.c  block_test_vector.c  hchacha20.c  kchacha.c  keygen_test_vector.c
tests/io/: buffered_reader.c
tests/poly1305/: test_vector.h  test_vector_bitint.c  test_vector_fbig.c
tests/slowarr/: nostd1.c  std1.c  std1.cxx
tests/util/: memrevcpy.c
